java.net repository added (jstl:jstl:1.2 is only available there)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@514421 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
     <module>impl</module>
   </modules>
   <repositories>
+     <repository>
+       <id>java.net</id>
+       <name>java.net Maven 1 Repository</name>
+       <url>https://maven-repository.dev.java.net/nonav/repository</url>
+       <layout>legacy</layout>
+    </repository>
     <repository>
       <releases>
         <enabled>false</enabled>
