jetty should work again
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@514489 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,20 @@
         </configuration>
       </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-idea-plugin</artifactId>
+	        <configuration>
+            <jdkName>1.5</jdkName>
+            <linkModules>true</linkModules>
+            <downloadSources>true</downloadSources>
+            <jdkLevel>5.0</jdkLevel>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
   <dependencyManagement>
     <dependencies>
@@ -140,6 +154,10 @@
           <exclusion>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
           </exclusion>
           <exclusion>
             <groupId>avalon-framework</groupId>
