--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.3</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-idea-plugin</artifactId>
 	        <configuration>
             <jdkName>1.5</jdkName>
@@ -246,6 +251,13 @@
         <groupId>cactus</groupId>
         <artifactId>cactus</artifactId>
         <version>13-1.7.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>5.1</version>
+        <classifier>jdk15</classifier>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
