- Get the maven-faces-plugin from the apache snapshots repository instead of the baranda's repo - Some pom clean up
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@540254 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -29,14 +29,9 @@
         </executions>
       </plugin>
       <plugin>
-        <!--
-        this plugin needs to be built from
-        https://svn.apache.org/repos/asf/incubator/adffaces/branches/faces-1_2-061113/plugins/maven-faces-plugin
-        temporarily fetched from baranda's repo
-        -->
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>incubator-1.2-07-apr-SNAPSHOT</version>
+        <version>1.2-07-apr-SNAPSHOT</version>
         <configuration>
           <typePrefix>javax.faces</typePrefix>
           <packageContains>javax.faces</packageContains>
@@ -269,14 +264,5 @@
       </plugin>
     </plugins>
   </reporting>
-
-  <!-- Temporary repo while the maven-faces-config plugin is not available
-  in a proper place -->
-  <pluginRepositories>
-      <pluginRepository>
-          <id>baranda-repo</id>
-          <url>http://people.apache.org/~baranda/repo</url>
-      </pluginRepository>
-  </pluginRepositories>
 
 </project>
