--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,14 @@
     </dependencies>
   </dependencyManagement>
 
+   <pluginRepositories>
+        <pluginRepository>
+            <id>apache.snapshots</id>
+            <name>Apache Snapshot Repository</name>
+            <url>http://people.apache.org/repo/m2-snapshot-repository</url>
+        </pluginRepository>
+    </pluginRepositories>
+
   <distributionManagement>
     <site>
       <id>apache-site</id>
