Fixes MYFAECS-1646 (Using alternative configurations (e.g. ViewHandlers) not working properly)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@542008 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -44,9 +44,7 @@
             <f>http://java.sun.com/jsf/core</f>
             <h>http://java.sun.com/jsf/html</h>
           </taglibs>
-          <!--
-          <faceletHandlerClass>org.apache.myfaces.trinidadinternal.facelets.TrinidadComponentHandler</faceletHandlerClass>
-           -->
+          <targetPath>META-INF/standard-faces-config.xml</targetPath>
           <packageContains>org.apache</packageContains>
           <skipApiOrBaseClasses>false</skipApiOrBaseClasses>
           <jsfVersion>1.2</jsfVersion>
@@ -60,7 +58,6 @@
             <goals>
               <goal>generate-faces-config</goal>
               <goal>generate-jsp-taglibs</goal>
-              <!--<goal>generate-facelets-taglibs</goal>-->
             </goals>
           </execution>
         </executions>
