--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
         <groupId>org.apache.myfaces.core</groupId>
         <artifactId>myfaces-build</artifactId>
         <version>1.2.0-SNAPSHOT</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.myfaces.core</groupId>
