--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,6 +17,13 @@
     <url>http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12/api</url>
   </scm>
   <build>
+    <extensions>
+     <extension>
+       <groupId>org.apache.myfaces.core</groupId>
+       <artifactId>myfaces-build</artifactId>
+       <version>1.2.0-SNAPSHOT</version>
+     </extension>
+    </extensions>
     <plugins>
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
@@ -152,11 +159,6 @@
     </profile>
   </profiles>
   <dependencies>
-    <dependency>
-       <groupId>org.apache.myfaces.core</groupId>
-       <artifactId>myfaces-build</artifactId>
-    </dependency>
-
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
