--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -17,6 +17,13 @@
     <url>http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12/impl</url>
   </scm>
   <build>
+    <extensions>
+     <extension>
+       <groupId>org.apache.myfaces.core</groupId>
+       <artifactId>myfaces-build</artifactId>
+       <version>1.2.0-SNAPSHOT</version>
+     </extension>
+    </extensions>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
