--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -17,13 +17,6 @@
     <url>http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12/impl</url>
   </scm>
   <build>
-    <extensions>
-     <extension>
-       <groupId>org.apache.myfaces.core</groupId>
-       <artifactId>myfaces-build</artifactId>
-       <version>1.2.0-SNAPSHOT</version>
-     </extension>
-    </extensions>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
@@ -45,19 +38,19 @@
       <plugin>
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2-07-apr-SNAPSHOT</version>
+        <version>1.2-07-may-SNAPSHOT</version>
         <configuration>
           <taglibs>
-            <f>http://java.sun.com/jsf/core</f>
             <h>http://java.sun.com/jsf/html</h>
           </taglibs>
           <targetPath>META-INF/standard-faces-config.xml</targetPath>
           <packageContains>org.apache</packageContains>
+          <converterPackageContains>javax.faces</converterPackageContains>
+          <validatorPackageContains>javax.faces</validatorPackageContains>
           <skipApiOrBaseClasses>false</skipApiOrBaseClasses>
           <jsfVersion>1.2</jsfVersion>
           <force>true</force>
           <templateSourceDirectory>src/main/java-templates</templateSourceDirectory>
-          <skipApiOrBaseClasses>false</skipApiOrBaseClasses>
           <disableIdExpressions>true</disableIdExpressions>
         </configuration>
         <executions>
@@ -68,13 +61,6 @@
             </goals>
           </execution>
         </executions>
-        <dependencies>
-          <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.12</version>
-          </dependency>
-        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -233,6 +219,12 @@
     <dependency>
       <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-api</artifactId>
+    </dependency>
+    <dependency>
+       <groupId>org.apache.myfaces.core</groupId>
+       <artifactId>myfaces-build</artifactId>
+       <version>1.2.0-SNAPSHOT</version>
+       <scope>provided</scope>
     </dependency>
     <dependency>
       <!-- this dependency will be packed together with the main artifact of this pom -->
