- Fixes MYFACES-1652 (Current shared 2.0 and 3.0 should be compatible) - Merged with parts of MyFaces core 1.1, which have been developed after branching 1.2 - Updated dependency on shale-test to 1.0.4
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@544646 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,7 @@
       <dependency>
         <groupId>org.apache.shale</groupId>
         <artifactId>shale-test</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.0.4</version>
       </dependency>
       <dependency>
         <groupId>jmock</groupId>
