update poms with 121 release of trinidad plugins
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@551492 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -38,7 +38,7 @@
       <plugin>
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2-07-may-SNAPSHOT</version>
+        <version>1.2.1</version>
         <configuration>
           <taglibs>
             <h>http://java.sun.com/jsf/html</h>
