--- a/api/pom.xml
+++ b/api/pom.xml
@@ -31,7 +31,7 @@
       <plugin>
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2-07-may-SNAPSHOT</version>
+        <version>1.2.1</version>
         <configuration>
           <typePrefix>javax.faces</typePrefix>
           <packageContains>javax.faces</packageContains>
