--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -27,6 +27,17 @@
     </resources>
     <plugins>
       <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-source</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+         </executions>
+        </plugin>
+      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <excludes>
@@ -38,7 +49,7 @@
       <plugin>
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2.1</version>
+        <version>1.2.1.1</version>
         <configuration>
           <taglibs>
             <h>http://java.sun.com/jsf/html</h>
