--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,16 @@
   <artifactId>myfaces-core-project</artifactId>
   <packaging>pom</packaging>
   <name>Core Project</name>
-  <version>1.2.0</version>
+  <version>1.2.1-SNAPSHOT</version>
   <url>http://myfaces.apache.org/projects</url>
   <issueManagement>
     <system>jira</system>
     <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
   </issueManagement>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/myfaces-base-1.2.0</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/myfaces-base-1.2.0</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/tags/myfaces-base-1.2.0</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/jsf12</url>
   </scm>
   <modules>
     <module>build</module>
@@ -114,18 +114,18 @@
       <dependency>
         <groupId>org.apache.myfaces.core</groupId>
         <artifactId>myfaces-api</artifactId>
-        <version>1.2.0</version>
+        <version>1.2.1-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.apache.myfaces.core</groupId>
         <artifactId>myfaces-api</artifactId>
-        <version>1.2.0</version>
+        <version>1.2.1-SNAPSHOT</version>
         <classifier>tests</classifier>
       </dependency>
       <dependency>
         <groupId>org.apache.myfaces.shared</groupId>
         <artifactId>myfaces-shared-impl</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.1-SNAPSHOT</version>
       </dependency>
 
       <dependency>
