--- a/api/pom.xml
+++ b/api/pom.xml
@@ -139,7 +139,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>clirr-maven-plugin</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1.1</version>
             <configuration>
               <comparisonArtifacts>
                 <comparisonArtifact>
